# Xpire-tray

./: .gitignore  Cargo.toml  LICENSE.md  README.md  gui_utils.py  main.py  make.bat  pyproject.toml  requirements.txt  setup.bat  setup.sh  test.py
backend/: __init__.py  assess.py  constants.py  data.py  dates.py  gettoken.py  handle_input.py  imageapi.py  nutrient_parsing.py  parse_foods_expiry.py  popup_classes.py  utils.py
backend/utils/: __init__.py  data.py  dates.py  food.py  popup.py  utils.py
data/: foods.csv
src/: lib.rs
storage/: database.pickle  foods.csv  foods.pickle
tests/modules/: test_image_recognition.py
